--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,104 @@
 anndata==0.10.9
-array_api_compat==1.8
+AnnSQL @ file:///home/kenny/Documents/OHSU/Projects/AnnSql/dist/AnnSQL-0.9.4-py3-none-any.whl#sha256=f2ef75f08d4b932600dd8801d74973bd8b8045203a4278cfb9bcaa8e9b4fd70f
+array_api_compat==1.9.1
 asttokens==2.4.1
 autocommand==2.2.2
 backports.tarfile==1.2.0
+build==1.2.2.post1
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 comm==0.2.2
 contourpy==1.3.0
+cryptography==43.0.3
 cycler==0.12.1
 debugpy==1.8.5
 decorator==5.1.1
+docutils==0.21.2
 duckdb==1.1.2
+e==1.4.5
 executing==2.1.0
-fonttools==4.53.1
-h5py==3.11.0
+fonttools==4.54.1
+h5py==3.12.1
+idna==3.10
 importlib_metadata==8.0.0
 importlib_resources==6.4.0
 inflect==7.3.1
 ipykernel==6.29.5
 ipython==8.27.0
+jaraco.classes==3.4.0
 jaraco.context==5.3.0
 jaraco.functools==4.0.1
 jaraco.text==3.12.1
 jedi==0.19.1
+jeepney==0.8.0
 joblib==1.4.2
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+keyring==25.5.0
 kiwisolver==1.4.7
 legacy-api-wrap==1.4
 llvmlite==0.43.0
+markdown-it-py==3.0.0
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+memory-profiler==0.61.0
 more-itertools==10.3.0
 natsort==8.4.0
 nest-asyncio==1.6.0
-networkx==3.3
+networkx==3.4.2
+nh3==0.2.18
 numba==0.60.0
-numpy==1.26.4
+numpy==2.0.2
 packaging==24.1
-pandas==2.2.2
+pandas==2.2.3
 parso==0.8.4
 patsy==0.5.6
 pexpect==4.9.0
-pillow==10.4.0
+pillow==11.0.0
+pkginfo==1.10.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==17.0.0
+pycparser==2.22
 Pygments==2.18.0
 pynndescent==0.5.13
-pyparsing==3.1.4
+pyparsing==3.2.0
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
-pytz==2024.1
+pytz==2024.2
 pyzmq==26.2.0
+readme_renderer==44.0
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.9.3
 scanpy==1.10.3
-scikit-learn==1.5.1
+scikit-learn==1.5.2
 scipy==1.14.1
 seaborn==0.13.2
+SecretStorage==3.3.3
 session_info==1.0.0
 setuptools==74.1.2
 six==1.16.0
 stack-data==0.6.3
-statsmodels==0.14.2
-stdlib-list==0.10.0
+statsmodels==0.14.4
+stdlib-list==0.11.0
 threadpoolctl==3.5.0
 tomli==2.0.1
 tornado==6.4.1
-tqdm==4.66.5
+tqdm==4.66.6
 traitlets==5.14.3
+twine==5.1.1
 typeguard==4.3.0
 typing_extensions==4.12.2
-tzdata==2024.1
-umap-learn==0.5.6
+tzdata==2024.2
+umap-learn==0.5.7
+urllib3==2.2.3
 wcwidth==0.2.13
 wheel==0.43.0
 zipp==3.19.2
