--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,12 +9,40 @@ nav:
     - Preprocessing: preprocessing.ipynb
     - Differential Expression: de.ipynb
     - Meta Cells: build_meta_cells.ipynb
-    - R usage: inteRoperability.md
+    - R usage: R_usage.md
+  # - Usage:
+  #   - Backup UMI Counts: ""
+  #   - Build Meta Cells: ""
+  #   - Differential Expression: ""
+  #   - Export to AnnData: ""
+  #   - Filter by Cells: ""
+  #   - Filter by Genes: ""
+  #   - Highly Variable Genes: ""
+  #   - Leiden Clustering: ""
+  #   - Marker Genes: ""
+  #   - Normalize Counts: ""
+  #   - PCA: ""
+  #   - Query: ""
+  #   - Query Delete: ""
+  #   - Query Raw: ""
+  #   - Total Counts: ""
+  #   - Total Gene Counts: ""
+  #   - Transform Expression: ""
+  #   - UMAP: ""
+  # - Plotting:
+  #   - Gene Counts: ""
+  #   - UMI Counts: ""
+  #   - Principle Components: ""
+  #   - PCA Variance: ""
+  #   - Highly Variable Genes: ""
+  #   - UMAP: ""
+  #   - Marker Genes: ""
+  - Interoperability: interoperability.md
   - API:
     - AnnSQL: api_annsql.md
     - MakeDb: api_makedb.md
     - BuildDb: api_builddb.md
-  - Citation: cite.md
+  - Reference: cite.md
   - Github: "https://github.com/ArpiarSaundersLab/annsql"
 plugins:
     - mkdocs-jupyter:
